--- a/src/templates/emailTemplate.ejs
+++ b/src/templates/emailTemplate.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Reset Your Password</h1>
-    <p>Hi <%= username %>,</p>
+    <p>Hi <%= name %>,</p>
     <p>
       We received a request to reset your password. You can reset your password
       by clicking the link below:
